# xcalc

./: CMakeLists.txt  README.md
src/: BinaryExpression.cpp  BinaryExpression.h  Calculator.cpp  Calculator.h  Expression.h  NumericExpression.cpp  NumericExpression.h  UnaryExpression.cpp  UnaryExpression.h  main.cpp
